<resources>
    <string name="app_name">RxjavaExampleProject</string>

    <string name="user_info">유저 정보</string>
    <string name="user_name">유저 이름</string>
    <string name="user_idx">유저 idx</string>

    <string name="rx_java">RX JAVA 액티비티</string>
    <string name="live_data">LiveData 액티비티</string>

    <string name="edit_user_info">유저 정보 수정</string>
    <string name="input_complete">입력 완료</string>
</resources>